# lbo_bbo_angle

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/lbo_bbo_angle/: __init__.py  app.py  calc.py  data.py
tests/: test_calc.py
