[project]
name = "lbo-bbo-angle"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Reto Trappitsch", email = "reto@galactic-forensics.space" }
]
dependencies = [
    "numpy>=1.26.3",
    "streamlit>=1.30.0",
]
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "MIT" }

[project.scripts]
hello = "lbo_bbo_angle:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.4",
    "ruff>=0.1.14",
    "hypothesis>=6.97.0",
]

[tool.rye.scripts]
format = "ruff format ."
lint = "ruff check ."
serve = "streamlit run streamlit_app.py"
test = "pytest ."

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lbo_bbo_angle"]
